tests/should_fail/match_not_exhaustive.luma
-- Non-exhaustive match without wildcard
let x = 1
match x do
  0 do print("zero") end
end
